@@ -337,6 +337,75 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testDecodePath ()
+specifier|public
+name|void
+name|testDecodePath
+parameter_list|()
+block|{
+specifier|final
+name|String
+name|SCAPED_PATH
+init|=
+literal|"hdfs-6662/test%25251%26%3Dtest?op=OPEN"
+decl_stmt|;
+specifier|final
+name|String
+name|EXPECTED_PATH
+init|=
+literal|"/hdfs-6662/test%251&=test"
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+name|DFSTestUtil
+operator|.
+name|newHAConfiguration
+argument_list|(
+name|LOGICAL_NAME
+argument_list|)
+decl_stmt|;
+name|QueryStringDecoder
+name|decoder
+init|=
+operator|new
+name|QueryStringDecoder
+argument_list|(
+name|WebHdfsHandler
+operator|.
+name|WEBHDFS_PREFIX
+operator|+
+literal|"/"
+operator|+
+name|SCAPED_PATH
+argument_list|)
+decl_stmt|;
+name|ParameterParser
+name|testParser
+init|=
+operator|new
+name|ParameterParser
+argument_list|(
+name|decoder
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|EXPECTED_PATH
+argument_list|,
+name|testParser
+operator|.
+name|path
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
